src/test/resources/validPrograms/weird_hello.frj
class A {
	method Int hello(Int a, mut Std std) =
		mut Std s = std.print("Hello"),
		a;
}

main =
	mut Std s = new Std(),
	new A().hello(4, s);
