src/test/resources/invalidPrograms/immFieldUpdate.frj
class A {
	Int foo;

	method Int illegal(Int newFoo) = this.foo = newFoo;
}

main = new A(5).illegal(12);
